--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.13"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
