--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:docker:dev": "ng serve --host 0.0.0.0",
+    "start:docker:dev": "ng serve --host 0.0.0.0 --poll=2000",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
